<resources>
    <string name="app_name">studentDetails</string>
    <string name="courses">Courses</string>
    <string name="course_name">Course Name</string>
    <string name="enter_course_name">Enter course Name</string>
    <string name="course_duration">Course Duration</string>
    <string name="course_description">Course Description</string>
    <string name="enter_current_year">Enter Current year</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="add_course">Add Course</string>
    <string name="enter_course_duration">Enter Course Duration</string>
    <string name="current_year">Current Year</string>

</resources>